# discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  justfile
.github/workflows/: dev-release.yaml  stable-release.yaml  test.yaml  trigger-release.yaml
src/: channels.rs  cli.rs  config.rs  data.rs  database.rs  discord.rs  http.rs  job_scheduler.rs  main.rs  plugins.rs  utils.rs
src/discord/: commands.rs  data.rs  event_handler.rs  events.rs  interactions.rs  job_scheduler.rs  requests.rs
src/http/: registry.rs
src/plugins/: builder.rs  registry.rs  runtime.rs
src/plugins/runtime/: internal.rs
src/plugins/runtime/internal/: core.rs  discord.rs  job_scheduler.rs
src/utils/: channels.rs  env.rs  logger.rs
wit/: core.wit  discord.wit  host.wit  job-scheduler.wit  plugin.wit  shared.wit  world.wit
